[gd_scene load_steps=8 format=2]

[ext_resource path="res://Recursos/Im치genes/Fondo_Perfiles.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Im치genes/Opcion1_Perfiles.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Im치genes/Opcion2_Perfiles.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Im치genes/Opcion3_Perfiles.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Fuentes/Kenney Pixel Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Perfiles_Selecc.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Perfil_Selecc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Fondo_Interfaz" type="Sprite" parent="."]
position = Vector2( 6024, 4220 )
scale = Vector2( 0.835938, 0.835938 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 14440, 10240 )

[node name="HBoxBotones" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -658.0
margin_top = -69.0
margin_right = 658.0
margin_bottom = 224.0
custom_constants/separation = 220

[node name="Btn_DV" type="Button" parent="HBoxBotones"]
margin_right = 292.0
margin_bottom = 293.0
icon = ExtResource( 2 )

[node name="Btn_CM" type="Button" parent="HBoxBotones"]
margin_left = 512.0
margin_right = 804.0
margin_bottom = 293.0
icon = ExtResource( 3 )

[node name="Btn_DS" type="Button" parent="HBoxBotones"]
margin_left = 1024.0
margin_right = 1316.0
margin_bottom = 293.0
icon = ExtResource( 4 )

[node name="Label_Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -677.0
margin_right = 677.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )
text = "SELECCIONA TU PERFIL"
align = 1
valign = 1

[connection signal="pressed" from="HBoxBotones/Btn_DV" to="." method="_on_Btn_DV_pressed"]
[connection signal="pressed" from="HBoxBotones/Btn_CM" to="." method="_on_Btn_CM_pressed"]
[connection signal="pressed" from="HBoxBotones/Btn_DS" to="." method="_on_Btn_DS_pressed"]
